[workspace]
resolver = "3"
members = [
    "examples/read_write",
    "xsd-parser-types",
    "xsd-parser",
]

[workspace.package]
license = "MIT"
edition = "2021"
authors = [ "Bergmann89 <info@bergmann89.de>", ]
keywords = [ "xsd", "xml", "generator", "quick-xml", "serde-xml-rs" ]
repository = "https://github.com/Bergmann89/xsd-parser"
homepage = "https://github.com/Bergmann89/xsd-parser"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
bit-set = "0.8"
bitflags = "2.7"
clap = "4.5"
encoding_rs = "0.8"
futures = "0.3"
indexmap = "2.9"
Inflector = "0.11"
num = "0.4"
parking_lot = "0.12"
proc-macro2 = "1.0"
quick-xml = "0.38"
quote = "1.0"
regex = "1.11"
reqwest = {version = "0.12", default-features = false}
rust_decimal = "1.39"
serde = "1.0"
serde-xml-rs = "0.8"
serde-xml-rs-v7 = { package = "serde-xml-rs", version = "0.7" }
smallvec = "1.13"
text-diff = "0.4"
thiserror = "2.0.0"
tokio = "1.41"
tracing = "0.1"
tracing-subscriber = "0.3"
unindent = "0.2"
url = "2.5"

xsd-parser = { version = "1.4.0", path = "./xsd-parser" }
xsd-parser-types = { version = "0.1.2", path = "./xsd-parser-types" }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1}
incomplete_features = "allow"
missing_debug_implementations = { level = "warn", priority = -1}
missing_docs  = { level = "warn", priority = -1}
nonstandard_style = { level = "warn", priority = -1}
rust_2018_idioms = { level = "warn", priority = -1}
rust_2021_compatibility = { level = "warn", priority = -1}
unreachable_pub  = { level = "warn", priority = -1}
unused = { level = "warn", priority = -1}

[workspace.lints.clippy]
cast_possible_truncation = "warn"
default_trait_access = "allow"
explicit_iter_loop = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"
pedantic = { level = "warn", priority = -1}
result_large_err = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_field_names = "allow"
uninlined_format_args = "allow"
